[gd_scene load_steps=44 format=3 uid="uid://cnjrlb1mvmof6"]

[ext_resource type="Texture2D" uid="uid://do22sakoowdtu" path="res://assets/1_assets_from_others/Cat Sprite Sheet_orange.png" id="1_6kyr0"]
[ext_resource type="Script" path="res://characters/kitty/kitty_lord.gd" id="1_8xtop"]
[ext_resource type="Script" path="res://scripts/RapidVector_StateMachine/node_state_machine.gd" id="3_qlcgv"]
[ext_resource type="Script" path="res://characters/kitty/idle_state.gd" id="4_b6j6m"]
[ext_resource type="Script" path="res://characters/kitty/walk_state.gd" id="5_y5by3"]
[ext_resource type="Script" path="res://characters/kitty/run_state.gd" id="6_a3gjt"]
[ext_resource type="Script" path="res://characters/kitty/jump_state.gd" id="7_ndftk"]
[ext_resource type="Texture2D" uid="uid://bc26ukyq58k4s" path="res://assets/ui/menuUI.png" id="8_kn2qq"]
[ext_resource type="Script" path="res://characters/kitty/sleeping_state.gd" id="8_wr22t"]
[ext_resource type="Script" path="res://characters/kitty/bap_state.gd" id="9_7s42f"]
[ext_resource type="Script" path="res://characters/kitty/hiss_state.gd" id="10_yy5xl"]
[ext_resource type="Texture2D" uid="uid://bgi5w8r3xkuq4" path="res://characters/kitty/blue_progress_bar.tres" id="11_tlvaq"]
[ext_resource type="Texture2D" uid="uid://nbncib14bn35" path="res://characters/kitty/red_progress_bar.tres" id="11_yyv23"]
[ext_resource type="AudioStream" uid="uid://cy8evvsa0xfou" path="res://assets/soundbites/meow_1.mp3" id="14_5u11k"]
[ext_resource type="AudioStream" uid="uid://bwpfu4hg58mdp" path="res://assets/soundbites/bap_1.mp3" id="14_uf58d"]
[ext_resource type="AudioStream" uid="uid://baxk76hnnldhq" path="res://assets/soundbites/meow_2.mp3" id="15_o37ru"]
[ext_resource type="AudioStream" uid="uid://cu3temsw6qimu" path="res://assets/soundbites/bap_2.mp3" id="15_xlu1p"]
[ext_resource type="AudioStream" uid="uid://divn2bogbiyi4" path="res://assets/soundbites/bap_3.mp3" id="16_830bf"]
[ext_resource type="AudioStream" uid="uid://c1ptyqj7lpyvs" path="res://assets/soundbites/meow_3.mp3" id="16_t7i25"]
[ext_resource type="AudioStream" uid="uid://dfb2nfd3ibgab" path="res://assets/soundbites/meow_4.mp3" id="17_l3sdm"]
[ext_resource type="AudioStream" uid="uid://vmbv7fl7h7r7" path="res://assets/soundbites/meow_5.mp3" id="18_lu7dp"]
[ext_resource type="AudioStream" uid="uid://di1hahryk4q8b" path="res://assets/soundbites/meow_6.mp3" id="19_0bxrg"]
[ext_resource type="AudioStream" uid="uid://cqn3ovx3lu7a" path="res://assets/soundbites/meow_7.mp3" id="20_4ypxt"]

[sub_resource type="Animation" id="Animation_rv7qj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bapAudioPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tlhis"]
resource_name = "bap"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.833333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 59, 60, 59, 60, 61]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bapAudioPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_jjar4"]
resource_name = "clean"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_aikl5"]
resource_name = "clean_2"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_eoksp"]
resource_name = "hiss"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.333333, 0.466667, 0.6, 0.733333, 0.866667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 74, 75, 74, 78, 73]
}

[sub_resource type="Animation" id="Animation_jr85i"]
resource_name = "idle_1"
length = 9.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 5, 5.2, 5.4, 5.6, 7, 7.2, 7.4, 7.6, 7.8, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 16, 17, 18, 19, 16, 17, 18, 19, 16, 0, 1, 2, 3, 0, 24, 25, 26, 27, 24, 0]
}

[sub_resource type="Animation" id="Animation_531jj"]
resource_name = "idle_2"
length = 8.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 4, 4.2, 4.4, 4.6, 4.8, 6, 6.2, 6.4, 6.6, 6.8, 7, 7.2, 7.4, 7.6, 7.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 8, 24, 25, 26, 27, 24, 8, 8, 9, 10, 11, 8, 16, 17, 18, 19, 16, 17, 18, 19, 16, 8]
}

[sub_resource type="Animation" id="Animation_en0cu"]
resource_name = "jump"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68, 69, 70]
}

[sub_resource type="Animation" id="Animation_rvauq"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_dr4m3"]
resource_name = "sleep"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_wmi3i"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6c3y"]
_data = {
"RESET": SubResource("Animation_rv7qj"),
"bap": SubResource("Animation_tlhis"),
"clean": SubResource("Animation_jjar4"),
"clean_2": SubResource("Animation_aikl5"),
"hiss": SubResource("Animation_eoksp"),
"idle_1": SubResource("Animation_jr85i"),
"idle_2": SubResource("Animation_531jj"),
"jump": SubResource("Animation_en0cu"),
"run": SubResource("Animation_rvauq"),
"sleep": SubResource("Animation_dr4m3"),
"walk": SubResource("Animation_wmi3i")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uj1w0"]
radius = 2.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0c0j7"]
atlas = ExtResource("8_kn2qq")
region = Rect2(144, 135, 16, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j0uy"]
atlas = ExtResource("8_kn2qq")
region = Rect2(144, 140, 16, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_nmack"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sd7le"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5hn02"]
radius = 5.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_akjnf"]
streams_count = 7
stream_0/stream = ExtResource("14_5u11k")
stream_1/stream = ExtResource("15_o37ru")
stream_2/stream = ExtResource("16_t7i25")
stream_3/stream = ExtResource("17_l3sdm")
stream_4/stream = ExtResource("18_lu7dp")
stream_5/stream = ExtResource("19_0bxrg")
stream_6/stream = ExtResource("20_4ypxt")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7usn5"]
streams_count = 3
stream_0/stream = ExtResource("14_uf58d")
stream_1/stream = ExtResource("15_xlu1p")
stream_2/stream = ExtResource("16_830bf")

[node name="kittyLord" type="CharacterBody2D" groups=["PlayerKitty"]]
y_sort_enabled = true
collision_layer = 3
collision_mask = 17
script = ExtResource("1_8xtop")
run_speed = 75
walk_speed = 30

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("1_6kyr0")
offset = Vector2(0, -16)
hframes = 8
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t6c3y")
}

[node name="standardCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uj1w0")

[node name="stateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("3_qlcgv")
initial_node_state = NodePath("idle")

[node name="idle" type="Node" parent="stateMachine" node_paths=PackedStringArray("player", "animation_player")]
script = ExtResource("4_b6j6m")
player = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="walk" type="Node" parent="stateMachine" node_paths=PackedStringArray("player", "animation_player")]
script = ExtResource("5_y5by3")
player = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="run" type="Node" parent="stateMachine" node_paths=PackedStringArray("player", "animation_player")]
script = ExtResource("6_a3gjt")
player = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="jump" type="Node" parent="stateMachine" node_paths=PackedStringArray("player", "animation_player")]
script = ExtResource("7_ndftk")
player = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="sleeping" type="Node" parent="stateMachine" node_paths=PackedStringArray("player", "animation_player")]
script = ExtResource("8_wr22t")
player = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="bap" type="Node" parent="stateMachine" node_paths=PackedStringArray("player", "animation_player")]
script = ExtResource("9_7s42f")
player = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="hiss" type="Node" parent="stateMachine" node_paths=PackedStringArray("player", "animation_player")]
script = ExtResource("10_yy5xl")
player = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="redProgressBar" type="TextureProgressBar" parent="."]
visible = false
z_index = 3
offset_left = -8.0
offset_top = -18.0
offset_right = 8.0
offset_bottom = -14.0
max_value = 240.0
value = 180.0
texture_under = SubResource("AtlasTexture_0c0j7")
texture_over = SubResource("AtlasTexture_2j0uy")
texture_progress = ExtResource("11_yyv23")

[node name="blueProgressBar" type="TextureProgressBar" parent="."]
visible = false
z_index = 3
offset_left = -8.0
offset_top = -18.0
offset_right = 8.0
offset_bottom = -14.0
max_value = 240.0
value = 180.0
texture_under = SubResource("AtlasTexture_0c0j7")
texture_over = SubResource("AtlasTexture_2j0uy")
texture_progress = ExtResource("11_tlvaq")

[node name="seekingArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="seekingArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_nmack")
debug_color = Color(0.758078, 0.122571, 0.320078, 0.42)

[node name="interactionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactionArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_sd7le")
debug_color = Color(0.644755, 0.515976, 0.234216, 0.42)

[node name="caughtArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="caughtArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_5hn02")
debug_color = Color(0.781857, 0.256015, 0.870392, 0.42)

[node name="meowAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_akjnf")

[node name="bapAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_7usn5")

[connection signal="body_entered" from="seekingArea" to="." method="_on_seeking_area_body_entered"]
[connection signal="body_exited" from="seekingArea" to="." method="_on_seeking_area_body_exited"]
[connection signal="area_entered" from="caughtArea" to="." method="_on_caught_area_area_entered"]
[connection signal="area_exited" from="caughtArea" to="." method="_on_caught_area_area_exited"]
[connection signal="finished" from="meowAudioPlayer" to="." method="_on_meow_audio_player_finished"]
